# Exchange-API

./: .env.example  .gitignore  1.sql  README.md  pyproject.toml
app/: main.py
app/api/api_v1/: __init__.py  balance.py  orders.py  public.py  user.py
app/api/dependencies/: auth.py
app/core/: __init__.py  config.py  consts.py  db.py  types.py
app/crud/: __init__.py  user.py
app/dependencies/: db.py
app/models/: __init__.py  base.py  orders.py  user.py
app/schemas/: user.py
app/utils/: token.py
